package hackathonmanager.model;

public interface Avaliavel {
    void calcularNotaFinal();
    void mostrarNotasDosJurados();
}
