package hackathonmanager.model;

public class Empresa extends Instituicao {
    public Empresa(String nome, String cnpj) {
        super(nome, cnpj);
    }
}
