package hackathonmanager.model;

public class Sala {
    private String codigo;

    public Sala(String cod){
        this.codigo = cod;
    }

    public String getCodigo() {
        return this.codigo;
    }
}
