package hackathonmanager.model;

public class Universidade extends Instituicao {

    public Universidade(String nome, String cnpj){
        super(nome, cnpj);
    }
}
